# chipoch

./: .gitignore  CMakeLists.txt  README.md  binary.c  binary2.c  chip-8.c  chip-8.h  gfx.c  main.c  main.h  meson.build  out  out.txt  replace.py  sound.c  video.c  video.h
